style: fix footer alignment on mobile to stay on the right

--- a/src/components/cinematic/ScrollVideoScrub.css
+++ b/src/components/cinematic/ScrollVideoScrub.css
@@ -362,8 +362,8 @@
   .cv-footer {
     bottom: 2rem;
     right: 8vw;
-    position: relative;
-    margin-top: 4rem;
+    position: absolute;
+    text-align: right;
   }
   
   .cv-right {
